# Definitive-Mod-Manager

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: apply_mods.py  brute_hash.py  calc_papgt_hash.py  crack_papgt_hash.py  extract_and_find_hash.py  extract_dll.py  fix_papgt.py  mount_mods.py  mount_multi.py  parse_pamt.py  patch_both_papgt.py  patch_papgt.py  patch_root_papgt.py  unmount_mods.py  verify_clean.py  verify_overlay.py
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/components/: AboutView.tsx  AsiModView.tsx  BackupManager.tsx  CheckResultDialog.tsx  CommunityView.tsx  CompatibilityView.tsx  ConflictView.tsx  LanguageView.tsx  LogPanel.tsx  ModCard.tsx  ModCreatorView.tsx  ModList.tsx  ModPackView.tsx  NexusBrowseView.tsx  PreflightDialog.tsx  ProfileManager.tsx  ReshadeView.tsx  SettingsView.tsx  Sidebar.tsx  SnapshotView.tsx  StatusBar.tsx  Titlebar.tsx
