[package]
name = "definitive-mod-manager"
version = "1.0.7"
description = "Definitive Mod Manager for Crimson Desert"
authors = ["Definitive Mod Manager"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
glob = "0.3"
zip = "2"
lz4_flex = "0.11"
lz4 = "1.28"
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }
